--- a/register/templates/admin/product.html
+++ b/register/templates/admin/product.html
@@ -77,12 +77,11 @@
       <thead class="thead-dark">
         <tr>
           <th scope="col">id</th>
-          <th scope="col">Product name</th>
-          <th scope="col">Price</th>
-          <th scope="col">Type</th>
-          <th scope="col">Quantity</th>
-          <th scope="col">Edit</th>
-          <th scope="col">Delete</th>
+          <th scope="col">Tên</th>
+          <th scope="col">Giá</th>
+          <th scope="col">Loại</th>
+          <th scope="col">Số lượng</th>
+          <th scope="col">Chỉnh sửa</th>
         </tr>
       </thead>
       <tbody>
@@ -93,8 +92,7 @@
           <td>{{product.price}}</td>
           <td>{{product.product_type}}</td>
           <td>{{product.quantity}}</td>
-          <td><a href="#">Edit</a></td>
-          <td><a href="#">Delete</a></td>
+          <td><a href="/editproduct/{{ product.id }}">Chỉnh sửa</a></td>
         </tr>
         {% endfor %}
       </tbody>
