--- a/register/templates/admin/ratingprocess.html
+++ b/register/templates/admin/ratingprocess.html
@@ -258,7 +258,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Employee home page</title>
+    <title>Rating process</title>
 </head>
 
 <body>
@@ -273,7 +273,7 @@
 
     <div class="main">
         <div class="container">
-            {% if messages %}
+            {% if ratingprocess.feedback != null %}
             <div class="alert alert-success" role="alert">
                 Send feedback successfully!
             </div>
